fix select wallet card not left align

--- a/app/style/GetStarted.less
+++ b/app/style/GetStarted.less
@@ -21,7 +21,6 @@
   width: 75%;
   height: 44px;
   margin-bottom: 10px;
-  margin-left: 30px;
 }
 
 .advanced-daemon-label {
